# MemBrain

./: .dockerignore  .env.example  .env.example.demo  .env.example.deploy  .env.example.dev  .env.example.evaluation  .gitattributes  .gitignore  Dockerfile  README.md  compose.yml  pyproject.toml  update.sh
demo/: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  start.sh
demo/manifests/: characters.yaml
demo/manifests/chat-reply/: manifest.json  memory.md  system.md
demo/manifests/memory-router/: manifest.json  schema.py  system.md
demo/manifests/reflection-character/: manifest.json  system.md
demo/manifests/reflection-user/: manifest.json  system.md
demo/scripts/: clean_db.py
demo/src/: config.py  database.py  main.py
demo/src/metrics/: __init__.py  timing.py
demo/src/models/: __init__.py  db.py  manifest.py  schemas.py
demo/src/registry/: __init__.py  agent_factory.py  task_registry.py
demo/src/routes/: characters.py  chat.py  personas.py  sessions.py
demo/src/services/: formatting.py  membrain_client.py  reflection_service.py  storage.py
demo/web-app/: env.d.ts  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
demo/web-app/src/: App.vue  constants.ts  style.css  types.ts
demo/web-app/src/components/: ChatInput.vue  ConfigModal.vue  MessageItem.vue  MessageList.vue  SessionSidebar.vue
demo/web-app/src/components/ui/: BaseButton.vue  BaseModal.vue  IconButton.vue  ToastContainer.vue
demo/web-app/src/composables/: useAutoScroll.ts  useCharacterAvatar.ts  useTitleEditor.ts  useToast.ts  useTypewriter.ts
demo/web-app/src/services/: api.ts
demo/web-app/src/utils/: auth.ts  character.ts  imageCache.ts  llmConfig.ts
demo/web-app/src/views/: CharacterSelectView.vue  ChatInterface.vue  LoginPage.vue
docs/: concurrency.md  frontend.md  layered-architecture.md  memory-api.md  tech_blog.md
evaluation/: cli.py  (+2 more)
(+203 files in other folders)
