[project]
name = "membrain-demo"
version = "0.1.0"
description = "Streaming chat application with PydanticAI backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "pydantic-settings",
    "httpx[socks]",
    "pydantic-ai",
    "openai",
    "python-dotenv",
    "python-ulid",
    "jinja2",
    "uuid-utils",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite",
    "aiofiles",
    "pyyaml",
    "prometheus-client",
]

[project.optional-dependencies]
dev = ["ruff", "pytest", "pytest-asyncio"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "B008"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
